--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -121,19 +121,41 @@ A realização da política cultural brasileira em toda sua amplitude necessita 
 # 8  REFERENCIAL ESTRATÉGICO DE TI
 
 ## 8.1  Missão
-<< Descrever a missão da unidade de TI, ressaltando o motivo da existência desta unidade na organização.“Por que existimos?”, “O que fazemos” e “Para quem fazemos?” >>
+Oferecer para os usuários do Sistema Minc e para os cidadãos brasileiros uma experiência tecnológica simples e intuitiva, por meio de ferramentas de gestão participativa, de transparência de informações e da oferta de serviços digitais que facilitem a relação do cidadão com as políticas públicas do Ministério da Cultura.
 
 ## 8.2  Visão
-<< Descrever a visão futura da unidade de TI, estabelecendo quais objetivos se busca alcançar. “O que queremos no futuro?”, “Onde pretendemos chegar?” >>
+Tornar-se um modelo de gestão corporativa de TI pública, baseada em colaboração e cooperação, com capacidade de atendimento de alta qualidade para seus usuários, com foco no cidadão, com o apoio de soluções livres, métodos ágeis e governança participativa de TI.
 
 ## 8.3  Valores
-<< Descrever os valores e atributos que definem o comportamento e comprometimento da unidade de TI com o órgão, quais são aqueles que facilitam a participação das pessoas na execução da missão para o alcance da visão. “Como tratar as áreas de negócio?”, “Qual a nossa responsabilidade junto ao órgão?” >>
+- Comunicação – Primar pela comunicação ativa entre unidades e usuários, a fim de proporcionar a troca de ideias, o diálogo e o compartilhamento da informação.
+- Eficiência – Entregar a informação adequada, no tempo certo, de maneira mais econômica e produtiva.
+- Continuidade – Ater-se ao que foi planejado, em busca da melhoria contínua.
+- Transparência – Dar visibilidade nas ações da CGTEC, aos usuários e às unidades.
+- Confiabilidade – Manter a informação confiável e disponível aos gestores e demais envolvidos.
+- Cooperação – Atuar em equipe na busca de solução, respeitando as diferenças.
+- Sustentabilidade – Conquistar a excelência da gestão pela capacidade interna de lidar com as oportunidades e ameaças.
+- Inovação – Buscar oportunidades que proporcionem melhorias na entrega dos serviços ao MinC.
 
 ## 8.4  Objetivos Estratégicos
-<< Descrever os objetivos estratégicos da unidade de TI que estão alinhados aos objetivos estratégicos da organização >>
+
+-- MAPA DE OBJETIVOS --
+
+Os objetivos estratégicos são resultados que a CGTEC pretende alcançar, desdobrados a partir da Visão, como condutores do caminho a ser seguido para alcançá-la. Neste sentido, o planejamento estratégico de TI, traz esses novos direcionadores, para o momento de transição e alinhamento do órgão, sem deixar de se relacionar com o passado, mas com prioridade e atenção para o futuro.
 
 ## 8.5  Análise de SWOT
 << Inserir a matriz de SWOT, apresentando o posicionamento estratégico da unidade de TI, com a identificação dos pontos fortes e fracos, das oportunidades e ameaças em relação aos ambientes interno e externo >>
+
+## 8.6 Fatores Críticos de Sucesso
+
+Os fatores levantados como críticos para a efetiva implantação e consequente obtenção dos resultados previstos pela TI são:
+
+- Manter o compromisso da alta administração, por meio do Comitê de Governança Digital, de forma a patrocinar a execução e cumprimento deste PDTIC;
+- Garantir a participação da TIC no planejamento das iniciativas estratégicas organizacionais;
+- Garantir recursos orçamentários, financeiros e humanos para a execução das ações e dos projetos do PDTIC;
+- Aprimorar as estruturas de governança de TIC, conforme ações propostas no PDTIC;
+- Revisão periódica deste PDTIC pelo CGD;
+
+
 
 # 9  ALINHAMENTO COM A ESTRATÉGIA DA ORGANIZAÇÃO
 << Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
