--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -7,16 +7,16 @@
 ## Equipe 
 
 Sérgio Sá Leitão
-**Ministro da Cultura**
+ **Ministro da Cultura**
 
 Mariana Ribas
-**Secretária-Executiva**
+ **Secretária-Executiva**
 
 Felipe Caldeira Marron da Rocha
-**Subsecretário de Planejamento, Orçamento e Administração**
+ **Subsecretário de Planejamento, Orçamento e Administração**
 
 Lucineide Alves de Oliveira Medeiros da Costa
-**Subsecretária de Gestão Estratégica**
+ **Subsecretária de Gestão Estratégica**
 
 Nitai Bezerra da Silva
 **Coordenador-Geral de Infraestrutura Tecnológica**
@@ -88,11 +88,12 @@ A realização da política cultural brasileira em toda sua amplitude necessita 
 
 
 ## Estrutura Organizacional
-? atual estrutura regimental do MinC é regida pelo Decreto nº 8.837, de 17 de agosto de 2016:
+Atual estrutura regimental do MinC é regida pelo Decreto nº 8.837, de 17 de agosto de 2016:
 
-?Figura 1 - Estrutura Organizacional do MinC
+![Figura 1 - Estrutura Organizacional do MinC](https://github.com/culturagovbr/pdtic-minc/tree/master/PDTIC-2018-2020/img/orgminc.jpg)
 
-?O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 8 regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
+
+O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 8 regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
 
 
 # 2  TERMOS E ABREVIAÇÕES
