--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -88,15 +88,16 @@ A realização da política cultural brasileira em toda sua amplitude necessita 
 
 
 ## Estrutura Organizacional
+[//]: # (jjeske: ainda trabalhando nesta seção)
 Atual estrutura regimental do MinC é regida pelo Decreto nº 8.837, de 17 de agosto de 2016:
 
 ![Figura 1 - Estrutura Organizacional do MinC](https://github.com/culturagovbr/pdtic-minc/tree/master/PDTIC-2018-2020/img/orgminc.jpg)
-
 
 O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 8 regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
 
 
 # 2  TERMOS E ABREVIAÇÕES
+[//]: # (jjeske: ainda trabalhando nesta seção)
 - Ministério da Cultura - MinC
 - Comitê de Governança Digital - CGD
 - Coordenação-Geral de Infraestrutura Tecnológica - CGTEC
@@ -106,8 +107,31 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 # 3  METODOLOGIA APLICADA PARA ELABORAÇÃO
 << Descrever brevemente a metodologia utilizada para elaboração do PDTI, bem como se alguma boa prática ou ferramenta foi aplicada >>
 
-# 4  DOCUMENTOS DE REFERÊNCIA
-<< Listar os documentos mais relevantes utilizados para a elaboração do PDTI, tais como: PPA, LDO, LOA, Plano Estratégico do Órgão (PEI), EGTIC, PETI, PDTI vigente, regimento interno, leis, decretos, instruções normativas, acórdãos >>
+# 4  DOCUMENTOS DE REFERÊNCIA 
+[//]: # (jjeske: ainda trabalhando nesta seção)
+Para a elaboração deste Plano Diretor de Tecnologia da Informação e Comunicação, consideraram-se os seguintes documentos como principais referenciais:
+
+- Regimento Interno do Ministério da Cultura - Portaria nº 40, de 30 de abril de 2013;
+- PPA 2012 a 2015 – Ministério da Cultura;
+- PDTIC 2015-2017;
+- Modelo de Referência 2011-2012 - Plano Diretor de Tecnologia de Informação do SISP;
+- Instrução Normativa MP/SLTI No 004/2010;
+- Portaria Normativa MP/SLTI No 05/2002;
+- Portaria Normativa MP/SLTI No 03/2007;
+- Medida Provisória No 2200-2/2001;
+- Decreto Nº 7.579, de 11 de outubro de 2011;
+- Acórdão 1.603/2008 - TCU – Plenário;
+- Acórdão 2471/2008 TCU – Plenário;
+- Nota Técnica Sefti/TCU no 2;
+- Cobit 5.1 (Control Objectives for Information and Related Technology);
+- Estratégia Geral de Tecnologia da Informação (EGTI 2013-2015);
+- Decreto No 99.658 de 30 de outubro de 1990;
+- Instrução Normativa MP/SLTI 004/2014;
+- Estratégia de Governança Digital. (Portaria MP Nº 68, de 7 de Março de 2016);
+- Decreto No 8.777 de 11 de Maio de 2016.
+- Portaria Nº97, de 13 de outubro de 2017 - Institui a Política de Governança de Tecnologia da Informação e Comunicação no âmbito do Ministério da Cultura
+- Portaria Nº 92, de 9 de outubro de 2017, que institui o Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas
+
 
 # 5  PRINCÍPIOS E DIRETRIZES	
 << Descrever os princípios que determinam o ponto de partida, bem como as diretrizes que serão os norteadores para o alcance dos objetivos do PDTI. Eles orientarão o conteúdo do PDTI, priorizando as necessidades e definindo os critérios para aceitação dos riscos >>
