Análise das Metas do PDTIC anterior
Analisado as metas anteriores

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -105,7 +105,34 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 - Tecnologia da Informação e Comunicações – TIC
 
 # 3  METODOLOGIA APLICADA PARA ELABORAÇÃO
-<< Descrever brevemente a metodologia utilizada para elaboração do PDTI, bem como se alguma boa prática ou ferramenta foi aplicada >>
+
+A elaboração deste PDTIC orientou-se pelas boas práticas estabelecidas no documento Guia de PDTIC do SISP. O fluxo de execução do projeto de elaboração seguiu o modelo proposto pela Secretaria de Tecnologia da Informação–STI do Ministério do Planejamento, por meio da metodologia que orienta a realização em três fases principais:
+
+```mermaid
+graph LR
+A(Preparação) --> B(Diagnóstico)
+B --> C(Planejamento)
+```
+
+#### Preparação
+
+Preparar para Criação/Revisão do PDTIC - Consolidação dos documentos de referência e identificar as estratégias da organização, princípios e diretrizes.
+
+#### Diagnóstico
+
+Avaliar resultados do PDTIC Anterior - A fim de direcionar o trabalho de revisão do PDTIC anterior foi utilizado o PETIC 2015-2017, que serviu de base para toda a revisão e construção deste PDTIC.
+
+Analisar o referencial estratégico de TI - Levantou-se quais são os problemas a serem resolvidos ou oportunidades de melhoria relacionados ao PETIC, que é o referencial estratégico da TI.
+
+Análise da organização de TI - Analisou-se o contexto geral da CGTEC na organização e sua estrutura organizacional. Identificamos alguns problemas e oportunidades, que foram inseridos no inventário de necessidades.
+
+Análise SWOT da TI - durante a avaliação do PDTIC anterior foi realizada a análise de inserção da TI Corporativa, Análise SWOT da TI Organizacional, pela equipe da CGTEC.
+
+Identificar necessidades - Para um levantamento mais específico das áreas de negócio em relação as necessidades de TI, foram realizadas reuniões com as áreas de negócio de forma a identificar as necessidades de cada área. O histórico desse trabalho é apresentado no anexo II.
+
+#### Planejamento
+
+Com o diagnóstico finalizado e revisado, as necessidades de TI foram priorizadas com base em uma metodologia, agrupadas por similaridade e assim foram propostos projetos para o seu atendimento.
 
 # 4  DOCUMENTOS DE REFERÊNCIA 
 [//]: # (jjeske: ainda trabalhando nesta seção)
@@ -139,9 +166,49 @@ Para a elaboração deste Plano Diretor de Tecnologia da Informação e Comunica
 # 6  ORGANIZAÇÃO DA TI 
 << Descrever a TI organizacional quanto à estrutura, à arquitetura, aos processos e aos recursos de TI. Informar o contexto geral em que se insere a unidade de TI na organização, apresentando a estrutura do órgão e da unidade de TI, por meio de organogramas. Evidenciar a hierarquia e as relações de subordinação e comunicação. Informar atividades e funções desenvolvidas pela unidade de TI >>
 
-# 7  RESULTADOS DO PDTI ANTERIOR 
-<< A partir do Relatório de Resultados do PDTI – RR-PDTI – anterior, descrever, de forma sucinta, quais foram os resultados alcançados com o plano antecedente, identificando quais metas foram cumpridas, quais não foram, os motivos pelos quais não foram cumpridas, quais fatores intervenientes contribuíram para o não cumprimento das metas, se as metas foram realistas e adequadas e o que seria necessário para capacitar a organização a cumprir as novas metas relacionadas com o uso e a gestão de TI >>
-<< Caso o órgão não possua PDTI anterior, deve-se explicitar a ausência deste fato e informar sobre outro possível instrumento de planejamento que tenha sido utilizado, como por exemplo o PPA, PEI ou EGTIC >>
+# 7  RESULTADOS DO PDTIC ANTERIOR 
+[//]: # (jjeske: ainda trabalhando nesta seção)
+
+O PDTIC anterior, com vigência entre os anos 2015 e 2017, 10 Objetivos Estratégicos TIC que foram desdobrados em 14 metas que por sua vez foram traduzidas para XXX Necessidades de Sistemas de Informação e Softwares, XXX Necessidades de Infraestrutura e Comunicações, XXX Necessidades de Serviços de TI, XXX Necessidades de Pessoal e Capacitação. 
+
+## 7.1 Análise das Metas do PDTIC 2015-2017
+
+| ID   | Descrição da Meta                                                        | Indicador da Meta                                                      | 2015 | 2016 | 2017 | Análise                   | 
+|------|--------------------------------------------------------------------------|------------------------------------------------------------------------|------|------|------|---------------------------| 
+| 1.1  | Integrar sistemas por meio de uma identidade única                       | % de sistemas do portfólio com acesso unificado                        | 20%  | 60%  | 90%  | **Parcialmente Atendida** | 
+| 1.2  | Disponibilizar carta de serviços do Minc                                 | Carta de serviços do Minc publicada/revisada                           | 1    | 1    | 1    | **Atendida**              | 
+| 2.1  | Melhorar a satisfação do usuário de TI                                   | Nota na Pesquisa anual de satisfação, com escala de 1 a 5              | 2    | 3    | 4    | **Atendida**              | 
+| 3.1  | Assegurar disponibilidade de acesso à internet                           | Porcentagem de tempo disponível em relação ao período                  | 85%  | 92%  | 99%  | **Atendida**              | 
+| 4.1  | Mapear processos de TI                                                   | Processos mapeados (COBIT)                                             | 1    | 3    | 5    | **Parcialmente Atendida** | 
+| 5.1  | Publicar o resultado do monitoramento dos ativos e serviços da TI        | Relatório publicado                                                    | 1    | 4    | 4    | **Não Atendida**          | 
+| 6.1  | Publicar padrão de usabilidade                                           | Padrão de usabilidade publicado/revisado                               | 1    | 1    | 1    | **Não Atendida**          | 
+| 6.2  | Garantir a qualidade dos sistemas desenvolvidos                          | Satisfação dos usuários com relação aos sistemas desenvolvidos (1 à 5) | 2    | 3    | 4    | **Atendida**              | 
+| 7.1  | Criar repositórios abertos com o código-fonte dos sistemas desenvolvidos | Número de soluções do com código-fonte aberto                          | 3    | 10   | 15   | **Atendida**              | 
+| 7.2  | Publicar normativo de licenciamento de código-fonte                      | Normativo publicado/revisado                                           | 1    | 1    | 1    | **Não Atendida**          | 
+| 8.1  | Realizar eventos de capacitação em serviços digitais                     | Evento de capacitação realizado                                        | 3    | 6    | 6    | **Atendida**              | 
+| 9.1  | Desenvolvimento de Software baseado em inovação                          | Parcerias realizadas                                                   | 3    | 5    | 8    | **Atendida**              | 
+| 10.1 | Ampliar a quantidade de servidores na TI                                 | Servidores com formação superior alocados na TI                        | 20   | 24   | 40   | **Não Atendida**          | 
+| 10.2 | Ampliar a capacidade de desenvolvimento de sistemas                      | Capacidade de projetos de sistemas simultâneos                         | 11   | 15   | 20   | **Atendida**              | 
+
+Das 14 metas acima analisadas obteve-se o seguinte resultado:
+
+- 8 Atingidas
+- 2 Parcialmente Atendidas
+- 4 Não atendidas
+
+## 7.2 Análise das Necessidades PDTIC 2015-2017
+
+FAZER-- O PDTIC anterior contou com XXX necessidades, das quais XXX foram totalmente atendidas, XXX foram parcialmente atendidas e XXX não foram atendidas. No período 2015-2017, executou-se XXX% de suas ações previstas.
+
+## 7.2 Análise dos Projetos do PDTIC 2015-2017
+
+FAZER-- O PDTIC anterior contou com XXX projetos, das quais XXX foram totalmente concluídos, XXX foram parcialmente concluídos e XXX não foram concluídos. No período 2015-2017, executou-se XXX% dos projetos previstos.
+
+## 7.3 Relatório de Resultados
+
+Além de apontar a evolução da TIC em relação às ações previstas no PDTI 2015-2017, foram analisadas as razões pelas quais as ações não puderam ser executadas. As justificativas se dividem em falta de recursos humanos e mudança de prioridade. Quanto ao fatores mudança de prioridade, cabe destacar que durante a vigência de 3 anos ocorreram alterações estruturais no Ministério e troca de representantes na alta administração do Ministério. Como resultado dessas mudanças é natural que algumas necessidades percam a prioridade chegando a serem desnecessárias.
+
+Analisando os dados referentes às justificativas da não realização das ações, infere-se que se houvesse um maior número de recursos humanos teríamos uma maior execução das ações previstas. Outro ponto relevante seria uma maior disponibilidade de tempo do Comitê de Governança de Digital para se reunir com a finalidade de aprovar as alterações de priorização. 
 
 # 8  REFERENCIAL ESTRATÉGICO DE TI
 
@@ -223,8 +290,14 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 << Registrar os fatores ou as condições que podem definir o sucesso ou o fracasso da execução do PDTI >>
 
 # 18  CONCLUSÃO
-<< Descrever a importância da TI para o negócio da organização >>
-<< Descrever a necessidade de execução, bem como sensibilizar sobre a importância do acompanhamento contínuo do PDTI para o alcance das metas estabelecidas >>
+O Plano Diretor de Tecnologia da Informação e Comunicação - PDTIC formaliza e comunica à organização os Planos, Metas e Ações em Tecnologia da informação que serão realizados no período de vigência deste instrumento de planejamento, após a realização de diagnóstico que exibe a situação atual e sinaliza a tendência para os investimentos. Além disso, demonstra de modo claro e transparente como os recursos e serviços de TI serão alocados para atender aos objetivos estratégicos do órgão.
+
+Ressalta-se a importância que a TI oferece às áreas de negócio do MinC, automatizando tarefas e agregando valor por meio da disponibilização das informações no momento correto, de forma íntegra e segura.
+
+Este instrumento tem por objetivo não apenas transparecer os investimentos em TI feitos no órgão, mas principalmente, de traduzir os desafios de colocar o Ministério da Cultura em um novo patamar tecnológico, com a oferta de serviços digitais para usuários e cidadãos, de forma a encontrar alinhamento e consonância com a Estratégia de Governança Digital do SISP. O PDTIC não é um documento estático e definitivo, podendo ser alterado pelo Comitê de Governança Digital para se ajustar ao cenário financeiro e político do órgão, provendo assim a flexibilidade necessária para a melhoria dos processos e tarefas. 
+
+Por fim, espera-se com esse planejamento oferecer para os usuários do Ministério da Cultura, assim como para os cidadãos brasileiros beneficiados pelas políticas culturais do Governo Federal, uma experiência inovadora e empolgante, onde a tecnologia possa ajudar a romper barreiras e facilitar a relação do Estado com o cidadão, gerando novas oportunidades de desenvolvimento social, econômico e cultural.
+
 
 # 19  ANEXOS
 << Informações adicionais poderão ser incluídas:
