Adição de Riscos e Estrategias
Adição de Riscos e Estrategias

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -138,33 +138,64 @@ Com o diagnóstico finalizado e revisado, as necessidades de TI foram priorizada
 [//]: # (jjeske: ainda trabalhando nesta seção)
 Para a elaboração deste Plano Diretor de Tecnologia da Informação e Comunicação, consideraram-se os seguintes documentos como principais referenciais:
 
-- Regimento Interno do Ministério da Cultura - Portaria nº 40, de 30 de abril de 2013;
-- PPA 2012 a 2015 – Ministério da Cultura;
-- PDTIC 2015-2017;
-- Modelo de Referência 2011-2012 - Plano Diretor de Tecnologia de Informação do SISP;
-- Instrução Normativa MP/SLTI No 004/2010;
-- Portaria Normativa MP/SLTI No 05/2002;
-- Portaria Normativa MP/SLTI No 03/2007;
-- Medida Provisória No 2200-2/2001;
-- Decreto Nº 7.579, de 11 de outubro de 2011;
-- Acórdão 1.603/2008 - TCU – Plenário;
-- Acórdão 2471/2008 TCU – Plenário;
-- Nota Técnica Sefti/TCU no 2;
-- Cobit 5.1 (Control Objectives for Information and Related Technology);
-- Estratégia Geral de Tecnologia da Informação (EGTI 2013-2015);
-- Decreto No 99.658 de 30 de outubro de 1990;
-- Instrução Normativa MP/SLTI 004/2014;
-- Estratégia de Governança Digital. (Portaria MP Nº 68, de 7 de Março de 2016);
-- Decreto No 8.777 de 11 de Maio de 2016.
-- Portaria Nº97, de 13 de outubro de 2017 - Institui a Política de Governança de Tecnologia da Informação e Comunicação no âmbito do Ministério da Cultura
-- Portaria Nº 92, de 9 de outubro de 2017, que institui o Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas
+- Plano Nacional de Cultura
+- Estrutura Rgimental do MinC- Decreto Nº 8.837, de 17 de agosto de 2016
+- Lei Orçamentária Anual - LOA 2018
+- Lei de Diretrizes Orçamentárias - LDO 2018
+- Metas do Plano Plurianual – PPA – Ministério da Cultura
+- PDTIC 2015-2017
+- Guia PDTIC do SISP
+- Estratégia de Governança Digital - EGD 2016-2019
+- Política de Governança Digital - Decreto nº 8.638, de 15 de janeiro de 2016
+- Instrução Normativa MP/SLTI 004/2014
+- Plano de Dados Abertos do MinC - 2017/2018
+- Política de Governança de Tecnologia da Informação e Comunicação - Portaria Nº97, de 13 de outubro de 2017
+- Atribuições do Comitê Integrado de Tecnologia da Informação - Portaria Nº 92, de 9 de outubro de 2017
+- Atribuições do Comitê de Governança Digital no âmbito do Ministério da Cultura - Portaria Nº 3, de 17 de janeiro de 2017
 
+# 5  PRINCÍPIOS E DIRETRIZES
 
-# 5  PRINCÍPIOS E DIRETRIZES	
-<< Descrever os princípios que determinam o ponto de partida, bem como as diretrizes que serão os norteadores para o alcance dos objetivos do PDTI. Eles orientarão o conteúdo do PDTI, priorizando as necessidades e definindo os critérios para aceitação dos riscos >>
+São diretrizes da unidade de TI:
+	
+#### Diretriz Geral (DG):
+
+Manter-se alinhada com as áreas de negócio, em busca de auxiliar no alcance dos objetivos estratégicos do MinC.
+
+##### Diretrizes Específicas:
+- **D1** - Manter a transparência das suas ações e garantir a execução das deliberações do Comitê de Governança Digital.
+- **D2** - Fomentar a participação das áreas na gestão dos projetos de TI.
+- **D3** - Melhorar a experiência e a satisfação dos usuários de TI do MinC.
+- **D4** - Fortalecer as iniciativas baseadas em software livre e dados abertos.
+- **D5** - Atuar em parceria com as áreas de negócio em busca de soluções conjuntas.
+
+##### São princípios norteadores da unidade de TI:
+- **P1** - Colaboração, agilidade e transparência.
+- **P2** - Garantir a relação e a interação entre indivíduos.
+- **P3** - Entregar soluções funcionais e criativas.
+- **P4** - Ser responsivo às mudanças.
 
 # 6  ORGANIZAÇÃO DA TI 
-<< Descrever a TI organizacional quanto à estrutura, à arquitetura, aos processos e aos recursos de TI. Informar o contexto geral em que se insere a unidade de TI na organização, apresentando a estrutura do órgão e da unidade de TI, por meio de organogramas. Evidenciar a hierarquia e as relações de subordinação e comunicação. Informar atividades e funções desenvolvidas pela unidade de TI >>
+
+A Coordenação-Geral de Infraestrutura Tecnológica – CGTEC é uma unidade subordinada à Subsecretaria de Gestão Estratégica – SGE que, por sua vez, é órgão setorial do Sistema de Administração dos Recursos de Informação e Informática – SISP. A SGE tem suas atribuições definidas no Decreto nº 8.837, de 17 de agosto de 2016.
+
+À CGTEC compete normatizar, planejar, coordenar, orientar, executar, e avaliar o desenvolvimento de planos, programas e processos referentes à gestão dos recursos de Tecnologia da Informação, segurança da informação e comunicações no âmbito do Ministério da Cultura.
+
+A CGTEC propõe diretrizes e implementa políticas de Tecnologia da Informação no Ministério da Cultura em consonância com as orientações, normas e diretrizes definidas pelo órgão central do SISP, a Secretaria de Logística e Tecnologia da Informação do Ministério do Planejamento, Orçamento e Gestão.
+
+A atual posição da CGTEC na estrutura do MinC está apresentada abaixo:
+
+Figura 2 – Posição da CGTEC no MINC
+
+Após a reestruturação do MinC, promovida pelo Decreto nº 8.837, de 17 de agosto de 2016, a estrutura da CGTEC fica sofreu reduções em seu quadro de servidores, resultando na Figura 3:
+
+Figura 3 - Estrutura Atual da CGTEC
+
+Ressalta-se que a estrutura atual da CGTEC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 5, ou seja, uma redução na ordem de 58%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TI executados concorrentemente, como pode ser constatado no histórico deste plano.
+
+##6.2. Proposta de estrutura organizacional
+
+FAZER
+
 
 # 7  RESULTADOS DO PDTIC ANTERIOR 
 [//]: # (jjeske: ainda trabalhando nesta seção)
@@ -247,10 +278,8 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 - Aprimorar as estruturas de governança de TIC, conforme ações propostas no PDTIC;
 - Revisão periódica deste PDTIC pelo CGD;
 
-
-
 # 9  ALINHAMENTO COM A ESTRATÉGIA DA ORGANIZAÇÃO
-<< Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
+<< gestãoestrategica.cultura.gov.br Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
 
 # 10  INVENTÁRIO DE NECESSIDADES
 
@@ -269,9 +298,12 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 # 12  PLANO DE METAS E AÇÕES
 
 ## 12.1  Plano de Metas
-<< Inserir o plano de metas, o qual definirá marcos mensuráveis, controláveis e quantificáveis para a satisfação de cada necessidade registrada >>
+As metas estabelecidas ajudam a direcionar as ações de TI com foco nos seus objetivos estratégicos. As metas aqui definidas deverão ser monitoradas pelo Comitê de Governança Digital, e podem ser alteradas a qualquer momento pelo mesmo. Abaixo são demonstradas as metas e indicadores a serem monitorados, no período proposto, para garantir a persecução dos objetivos estratégicos de TI:
+
+-- NOVAS METAS --
  
 ## 12.2  Plano de Ações
+? PORTFOLIO DE PROJETOS ?
 << Inserir o plano de ações, o qual definirá quais ações devem ser executadas para que as metas definidas sejam alcançadas, apontando responsáveis, prazos e recursos necessários >>
 
 # 13  PLANO DE GESTÃO DE PESSOAS
@@ -281,15 +313,53 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 << Inserir o Plano Orçamentário, classificando as despesas entre investimento e custeio, bem como consolidar o valor necessário das ações planejadas >>
 
 # 15  PLANO DE GESTÃO DE RISCOS
-<< Inserir o plano de gestão de riscos, com os riscos identificados, probabilidade de ocorrência, impacto, resposta, contingência, além dos responsáveis para cada risco identificado >>
+
+O plano de gestão de riscos identifica os principais riscos que podem resultar na inexecução total ou parcial deste Plano Diretor de TI, impactando no alcance das metas e na realização das ações previstas. Para cada risco identificado é avaliada sua probabilidade de ocorrência e seu impacto. Da mesma forma é indicado o plano de mitigação para reduzir o risco e/ou a probabilidade de sua ocorrência e/ou o plano de contingência com as ações a serem tomadas caso o risco se concretize. A seguir, são apresentados os riscos:
+
+|    ID    |                                                 Risco                                                |    Probabilidade    |    Impacto    |     Tratamento     |
+|:--------:|:----------------------------------------------------------------------------------------------------:|:-------------------:|:-------------:|:------------------:|
+|    R1    |    Descontinuidade dos negócios pela não manutenção de contratos que suportam atividades críticas    |        Média        |      Alto     |    Contigenciar    |
+|    R2    |    Restrições orçamentárias                                                                          |         Alta        |      Alto     |       Aceitar      |
+|    R3    |    Evasão de servidores da área de TI                                                                |         Alta        |     Médio     |    Contigenciar    |
+|    R4    |    Insuficiência de recursos humanos para execução das ações planejadas                              |         Alta        |      Alto     |       Mitigar      |
+|    R5    |    Falta de patrocínio da Alta Direção                                                               |        Baixa        |      Alto     |       Mitigar      |
+
+### 15.1 R1 - Descontinuidade dos negócios
+
+Apesar de as atividades de Tecnologia da Informação serem planejadas, coordenadas e gerenciadas por servidores efetivos, a execução operacional de quase todas ocorrem por meio de contratos e termos de parceria firmados com prestadores externos de serviços técnicos especializados. Caso haja interrupção na execução destas parcerias, o impacto na operação da infraestrutura de TI e no desenvolvimento e manutenção de sistemas é imediato e **alto** – colocando em risco a continuidade das atividades críticas da instituição. 
+
+Dentre as possíveis razões para interrupção de contratos e Termos de Execução Descentralizadas, as principais são a impossibilidade legal dos fornecedores para renovações anuais, o reiterado descumprimento dos critérios de qualidade e performance estipulados e a perda das condições de habilitação. A probabilidade de ocorrência de tais fatos é **média** e requer uma gestão eficaz e constante fiscalização da qualidade dos serviços prestados, apoiados em modelos de remuneração por resultados, na avaliação da qualidade e no cumprimento de níveis mínimos de serviço.
+
+### 15.2 R2 - Restrições orçamentárias
+
+Nos últimos anos o Governo Federal vem praticando fortes cortes no orçamento federal, atingindo todos os órgãos e entidades do Poder Executivo. Tais cortes e contingenciamentos de recursos trarão impactos **diretos e imediatos** às ações planejadas podendo resultar em seu atraso, suspensão e até cancelamento. A probabilidade de ocorrência de restrições orçamentárias é **alta**, considerando o cenário atual, os reflexos da política econômica do Governo e o período de transição eleitoral.
+
+Como é um fator externo ao MinC, não é possível minimizar sua probabilidade de ocorrência. A mitigação de tal risco se limita a manter uma priorização adequada das ações, que não permite o contigenciamento orçamentário, para que não haja adiamento ou inexecução por parte dos projetos.
+
+### 15.3 R3 - Evasão de Servidores da Área de TI
+
+A área de TI do MinC conta com apenas 10 servidores do quadro próprio em exercício, não havendo previsão de nenhum novo ingresso. A força de trabalho é composta essencialmente por técnicos contratados e por servidores integrantes do quadro próprio e de carreira de outros órgãos – destacadamente os Analistas em Tecnologia da Informação. O impacto desta evasão é **médio**, pois o quadro de servidores já está abaixo do nível mínimo desejado para a área; no entanto, a probabilidade de ocorrência é **alta** – dado que o histórico destas ocorrências no passado é considerável.
+
+Ações no sentido de proporcionar atrativos para a fixação desses servidores tendem a apresentar resultados positivos. Órgãos que oferecem condições de crescimento profissional, como cargos de direção e assessoramento (DAS), têm conseguido manter seus servidores na área de TI e minimizar os riscos de evasão. Adicionalmente, para reduzir esse risco, se faz necessário estabelecer um plano para capacitar tais servidores, esta ação visa assegurar a qualificação e produtividade, em consequência disso, manter servidores alocados nas áreas de seu interesse. Como resultado, almeja-se a manutenção de um quadro de pessoal integrado e motivado. Quanto à redução do impacto, ao menos dois servidores devem estar simultaneamente envolvidos com cada atividade ou projeto, sempre que possível. Outro fator que reduz o impacto é a existência de processos de trabalho documentados e a aderência a estes na execução das atividades da CGTEC 
+
+### 15.4 R4 - Insuficiência de Recursos Humanos
+
+É fato que o órgão enfrenta restrições relacionadas à insuficiência de recursos humanos do quadro de servidores para execução do escopo de suas atividades, não só na TI, mas em toda a sua estrutura. Como tal situação afeta profundamente as ações de TI, que são claramente separadas entre atividades gerenciais (atribuídas aos servidores) e atividades operacionais (aptas à delegação aos parceiros), a instituição lida constantemente com sério déficit de projetos, políticas e contratações estruturais. Em médio prazo, a fim de reduzir a probabilidade e o impacto deste risco, o órgão deve trabalhar na contratação de novos servidores, por meio de concurso público. 
+
+### 15.5 R5 - Falta de patrocínio da Alta Direção
+
+Um dos principais fatores de sucesso de todas as iniciativas de TI é o apoio da alta direção. Este é um princípio defendido pelos mais respeitadas referência em governança de TI como é o caso do guia de boas práticas COBIT e pela norma ISSO/IEC 38500 que oferece princípios para orientar os dirigentes das organizações sobre o uso eficaz, eficiente e aceitável da TI. 
+
+Considerando que a alta direção é composta pelas pessoas que possuem o mandato legítimo para escolher o que é melhor para a organização, uma iniciativa de TI que não contar com o seu apoio não obterá sucesso simplesmente porque na análise comparativa entre as iniciativas que podem ser conduzidas, ela foi classificada como de menor importância, pois há um desalinhamento de objetivos entre duas esferas de decisão, a Coordenação-Geral de Infraestrutura Tecnológica e a alta direção. E neste caso, as opiniões da alta direção têm precedência sobre as opiniões da CGTEC. Duas são as possíveis fontes de desalinhamento:
+
+1.	A discrepância entre os conhecimentos de TI existentes entre a alta direção e a CGTEC. O que é natural, visto que a especialidade da área de TI é tecnicamente diferente da especialidade da alta direção. Assim para mitigar este risco, cabem aos gestores de TI traduzir os custos e benefícios da TI em termos de custos e benefícios de negócio. O caminho indicado vai depender exclusivamente das características da alta direção da organização combinadas às orientações estratégicas da instituição. 
+
+2.	Outra fonte para o desalinhamento de objetivos é a discrepância entre as agendas. Enquanto a alta direção se orienta para determinadas ações estratégicas as iniciativas de TI estão propostas com orientações distintas. Este problema pode ser resolvido com o alinhamento das agendas por meio do Comitê de Governança Digital que tem representação da Secretaria Executiva, das Secretarias (gestoras de negócio) e da CGTEC. Esta ação tem como objetivo instituir uma agenda única e, consequentemente, um alinhamento de objetivos da TI com a alta direção. 
 
 # 16  PROCESSO DE REVISÃO DO PDTI 
 << Informar a periodicidade das revisões que ocorrerão durante a validade do PDTI, bem como os responsáveis pelas revisões e os motivos que podem provocar atualizações no documento >>
 
-# 17  FATORES CRÍTICOS DE SUCESSO
-<< Registrar os fatores ou as condições que podem definir o sucesso ou o fracasso da execução do PDTI >>
-
-# 18  CONCLUSÃO
+# 17  CONCLUSÃO
 O Plano Diretor de Tecnologia da Informação e Comunicação - PDTIC formaliza e comunica à organização os Planos, Metas e Ações em Tecnologia da informação que serão realizados no período de vigência deste instrumento de planejamento, após a realização de diagnóstico que exibe a situação atual e sinaliza a tendência para os investimentos. Além disso, demonstra de modo claro e transparente como os recursos e serviços de TI serão alocados para atender aos objetivos estratégicos do órgão.
 
 Ressalta-se a importância que a TI oferece às áreas de negócio do MinC, automatizando tarefas e agregando valor por meio da disponibilização das informações no momento correto, de forma íntegra e segura.
@@ -299,7 +369,7 @@ Este instrumento tem por objetivo não apenas transparecer os investimentos em T
 Por fim, espera-se com esse planejamento oferecer para os usuários do Ministério da Cultura, assim como para os cidadãos brasileiros beneficiados pelas políticas culturais do Governo Federal, uma experiência inovadora e empolgante, onde a tecnologia possa ajudar a romper barreiras e facilitar a relação do Estado com o cidadão, gerando novas oportunidades de desenvolvimento social, econômico e cultural.
 
 
-# 19  ANEXOS
+# 18  ANEXOS
 << Informações adicionais poderão ser incluídas:
 Plano de trabalho do projeto de elaboração do PDTI, incluindo o cronograma;
 Relatório de Resultados do PDTI anterior;
