--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -114,11 +114,11 @@ A(Preparação) --> B(Diagnóstico)
 B --> C(Planejamento)
 ```
 
-#### Preparação
+### Preparação
 
 Preparar para Criação/Revisão do PDTIC - Consolidação dos documentos de referência e identificar as estratégias da organização, princípios e diretrizes.
 
-#### Diagnóstico
+### Diagnóstico
 
 Avaliar resultados do PDTIC Anterior - A fim de direcionar o trabalho de revisão do PDTIC anterior foi utilizado o PETIC 2015-2017, que serviu de base para toda a revisão e construção deste PDTIC.
 
@@ -130,7 +130,7 @@ Análise SWOT da TI - durante a avaliação do PDTIC anterior foi realizada a an
 
 Identificar necessidades - Para um levantamento mais específico das áreas de negócio em relação as necessidades de TI, foram realizadas reuniões com as áreas de negócio de forma a identificar as necessidades de cada área. O histórico desse trabalho é apresentado no anexo II.
 
-#### Planejamento
+### Planejamento
 
 Com o diagnóstico finalizado e revisado, as necessidades de TI foram priorizadas com base em uma metodologia, agrupadas por similaridade e assim foram propostos projetos para o seu atendimento.
 
@@ -157,18 +157,18 @@ Para a elaboração deste Plano Diretor de Tecnologia da Informação e Comunica
 
 São diretrizes da unidade de TI:
 	
-#### Diretriz Geral (DG):
+### Diretriz Geral (DG):
 
 Manter-se alinhada com as áreas de negócio, em busca de auxiliar no alcance dos objetivos estratégicos do MinC.
 
-##### Diretrizes Específicas:
+### Diretrizes Específicas:
 - **D1** - Manter a transparência das suas ações e garantir a execução das deliberações do Comitê de Governança Digital.
 - **D2** - Fomentar a participação das áreas na gestão dos projetos de TI.
 - **D3** - Melhorar a experiência e a satisfação dos usuários de TI do MinC.
 - **D4** - Fortalecer as iniciativas baseadas em software livre e dados abertos.
 - **D5** - Atuar em parceria com as áreas de negócio em busca de soluções conjuntas.
 
-##### São princípios norteadores da unidade de TI:
+### São princípios norteadores da unidade de TI:
 - **P1** - Colaboração, agilidade e transparência.
 - **P2** - Garantir a relação e a interação entre indivíduos.
 - **P3** - Entregar soluções funcionais e criativas.
@@ -370,6 +370,7 @@ Por fim, espera-se com esse planejamento oferecer para os usuários do Ministér
 
 
 # 18  ANEXOS
+
 << Informações adicionais poderão ser incluídas:
 Plano de trabalho do projeto de elaboração do PDTI, incluindo o cronograma;
 Relatório de Resultados do PDTI anterior;
